# ql_study

./: CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  Functions.cpp  Functions.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
